--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -65,6 +65,56 @@ textarea {
 
 /* !HOME BOX */
 
+/* SHOW PAGE */
+
+.data-card {
+  border: 1px solid black;
+  border-radius: 15px;
+  text-decoration: none;
+  color: black;
+}
+
+.data-card h5 {
+  font-size: 25pt;
+}
+.data-card h6 {
+  font-size: 15pt;
+}
+
+/* !SHOW PAGE */
+
+/* HOME */
+
+.dibuat {
+  color: white;
+  background-color: #32713f;
+  padding: 3px;
+  padding-inline: 30px;
+  border-radius: 5px;
+}
+
+.disunting {
+  color: black;
+  background-color: #f4e869;
+  padding: 3px;
+  padding-inline: 20px;
+  border-radius: 5px;
+}
+
+.dihapus {
+  color: white;
+  background-color: #ff2424;
+  padding: 3px;
+  padding-inline: 25px;
+  border-radius: 5px;
+}
+
+.nama_box {
+  margin-top: 30px;
+}
+
+/* !HOME */
+
 .color1 {
   background-color: #80ed99;
 }
