--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,5 +1,7 @@
 body {
-  background-color: #edfff1;
+  background-image: url('/public/bg.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .navbar-brand img {
