--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,7 +1,7 @@
 body {
   background-image: url('/public/bg.jpg');
   background-repeat: no-repeat;
-  background-size: 100%;
+  background-size: cover;
 }
 
 .navbar-brand img {
@@ -118,19 +118,19 @@ textarea {
 /* !HOME */
 
 .color1 {
-  background-color: #A7FF83;
+  background-color: #80ed99;
 }
 
 .color2 {
-  background-color: #17B978;
+  background-color: #57cc99;
 }
 
 .color3 {
-  background-color: #086972;
+  background-color: #38a3a5;
 }
 
 .color4 {
-  background-color: #071A52;
+  background-color: #22577a;
 }
 
 .form-check-label {
